#build file for CMake, see http://www.cmake.org/

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(pawn)

OPTION(USE_SANITIZERS "Compile with clang's sanitizers" OFF)

IF(USE_SANITIZERS)
  SET(SANITIZERS "-fsanitize=address")
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${SANITIZERS} -g3 -O0")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${SANITIZERS} -g3 -O0")
  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${SANITIZERS}")
  SET(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} ${SANITIZERS}")
ENDIF(USE_SANITIZERS)

ADD_SUBDIRECTORY(./compiler)
ADD_SUBDIRECTORY(./amx)
